[gd_scene load_steps=7 format=3 uid="uid://djfoodl5l5iym"]

[ext_resource type="Texture2D" uid="uid://c4dj3yit7ufdw" path="res://images/taiga/idle.png" id="1_62wml"]
[ext_resource type="Script" uid="uid://bdv0b5i1amim8" path="res://shoot.gd" id="1_ytqjl"]
[ext_resource type="Texture2D" uid="uid://p25cmynrcd4c" path="res://images/taiga/move_left.png" id="3_73a0l"]
[ext_resource type="Texture2D" uid="uid://bhdo2g3wstrxi" path="res://images/taiga/move_right.png" id="4_v5pym"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2l6ss"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_62wml")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_73a0l")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_v5pym")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h6m1n"]
radius = 49.5
height = 244.0

[node name="TaigaNode2D" type="Node2D"]
script = ExtResource("1_ytqjl")

[node name="Player" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Taiga" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_2l6ss")

[node name="Hurtbox" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_h6m1n")

[node name="ShotStart1" type="Marker2D" parent="Player"]
position = Vector2(0, -100)

[node name="ShotStart2" type="Marker2D" parent="Player"]
position = Vector2(20, -100)
rotation = 0.523599

[node name="ShotStart3" type="Marker2D" parent="Player"]
position = Vector2(-20, -100)
rotation = -0.523599

[node name="Shot_Cooldown" type="Timer" parent="Player"]
wait_time = 0.06

[connection signal="timeout" from="Player/Shot_Cooldown" to="." method="_on_shot_cooldown_timeout"]
